--- a/css/main.css
+++ b/css/main.css
@@ -5,7 +5,7 @@
 @import url(http://fonts.googleapis.com/earlyaccess/nanumgothiccoding.css);
 
 body {
-  font-family: "PT Serif","Nanum Gothic Coding", Georgia, "Times New Roman", serif;
+  font-family: "Nanum Gothic Coding","PT Serif", Georgia, "Times New Roman", serif;
   font-size: 15px;
   color: #515151;/*#3A3A3A;/*rgba(0,0,0,.8);/*#666;*/
   line-height: 1.75rem;
