--- a/css/main.css
+++ b/css/main.css
@@ -6,7 +6,7 @@
 
 body {
   font-family: "Nanum Gothic Coding","PT Serif", Georgia, "Times New Roman", serif;
-  font-size: 15px;
+  font-size: 16px;
   color: #515151;/*#3A3A3A;/*rgba(0,0,0,.8);/*#666;*/
   line-height: 1.75rem;
 }
@@ -37,7 +37,7 @@ h1, h2, h3, h4, h5, h6 {
 a {
   text-decoration: underline;
   /*border-bottom: 1px solid black;*/
-  color: #A0A0A0;/*#FF333E;*/
+  color: #819FFF;/*#A0A0A0;*//*#FF333E;*/
   -o-transition:.5s;
     -ms-transition:.5s;
     -moz-transition:.5s;
