first time in 2019
cuda,git,ubuntu

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -21,6 +21,9 @@
     src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-MML-AM_CHTML">
   </script>
 
+  <script src="/js/mermaid.full.min.js"></script>
+
+
   {% include google_analytics.html %}
 
 </head>
